# rpo_2021

./: README.md
backend/: pom.xml
backend/front/: package-lock.json  package.json
backend/front/src/: App.css  App.js  index.js
backend/front/src/components/: Alert.jsx  ArtistComponent.jsx  ArtistListComponent.jsx  CountryComponent.jsx  CountryListComponent.jsx  Home.jsx  Login.jsx  MuseumComponent.jsx  MuseumListComponent.jsx  MyAccountComponent.jsx  NavigationBar.jsx  PaginationComponent.jsx  PaintingComponent.jsx  PaintingListComponent.jsx  SideBar.jsx  UserListComponent.jsx
backend/front/src/services/: BackendService.jsx
backend/front/src/utils/: Rdx.jsx  Utils.jsx
backend/src/main/java/ru/iu3/rpo/backend/auth/: AuthenticationFilter.java  AuthenticationProvider.java  SecurityConfiguration.java
backend/src/main/java/ru/iu3/rpo/backend/controllers/: ArtistController.java  CountryController.java  LoginController.java  MuseumController.java  PaintingController.java  SampleController.java  UserController.java
backend/src/main/java/ru/iu3/rpo/backend/models/: Artist.java  Country.java  Museum.java  Painting.java  User.java
backend/src/main/java/ru/iu3/rpo/backend/repositories/: ArtistRepository.java  CountryRepository.java  MuseumRepository.java  PaintingRepository.java  UserRepository.java
backend/src/main/java/ru/iu3/rpo/backend/tools/: DataValidationException.java  Utils.java
backend/src/main/resources/: application.properties
db/: art.sql
diagram/: art.mwb
fclient/app/: build.gradle
fclient/app/src/main/: AndroidManifest.xml
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/java/ru/iu3/fclient/: MainActivity.java  PinpadActivity.java
fclient/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
fclient/app/src/main/res/values/: strings.xml  styles.xml
fclient/gradle/wrapper/: gradle-wrapper.properties
libs/spdlog/spdlog/: .travis.yml  README.md  appveyor.yml
